--- a/Cart.html
+++ b/Cart.html
@@ -88,22 +88,22 @@
       <td>$119.98</td>
     </tr>
     <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
+      <th scope="row">1</th>
+      <td>Cuisinart ® Double Belgian Waffle Maker</td>
+      <td>$119.99</td>
+      <td>$119.99</td>
     </tr>
     <tr>
       <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
+      <td>Chocolate Waffle Shot Cups</td>
+      <td>$24.99</td>
+      <td>$74.97</td>
     </tr>
 	<tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
+      <th scope="row">1</th>
+      <td>Its Waffle Time Pillowcase</td>
+      <td>$19.99</td>
+      <td>$19.99</td>
     </tr>  
   </tbody>
 </table>
